--- a/exp_1.ipynb
+++ b/exp_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwCcmeJ5zm0axL5y9gP0Wr",
+      "authorship_tag": "ABX9TyNrPQXqIq4NvnuO0M9DSfUi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -58,6 +58,21 @@
       "source": [
         "!git init"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prompt: additiion of two numbers\n",
+        "\n",
+        "def addition(a, b):\n",
+        "  \"\"\"\n",
+        "  return a + b\n"
+      ],
+      "metadata": {
+        "id": "ut62mctafG_h"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
