--- a/exp_2.ipynb
+++ b/exp_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM43GovDX9CGFTn+fdBrXvh",
+      "authorship_tag": "ABX9TyMNdWjHy0dywgpuhnVCvn5l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,68 +28,191 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "#Hardcoding#\n",
+        "def calculate_w(t, h):\n",
+        "    return (0.5 * t**2 - 0.2 * h - 15) / 0.9\n",
+        "\n",
+        "def main():\n",
+        "    print(\"\\nUsing the formula:\")\n",
+        "    print(\"w = (0.5 * t^2 - 0.2 * h - 15) / 0.9\")\n",
+        "    print(\"\\nEnter the temperature and humidity:\")\n",
+        "    temperature = 20\n",
+        "    humidity = 60\n",
+        "\n",
+        "    w = calculate_w(temperature, humidity)\n",
+        "    print(f\"\\nFor Temperature: {temperature}°C and Humidity: {humidity}%\")\n",
+        "    print(f\"Calculated w: {w}\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "n2eTp3hfegjH",
-        "outputId": "055d3650-7812-4f62-933d-35655a046acb"
+        "id": "NoVaTgZalOIX",
+        "outputId": "88228945-8c6c-48dc-88bb-4a68557e27c6"
       },
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the temperature (°C): 25\n",
-            "Enter the humidity (%): 15\n",
-            "Enter the wind speed (m/s): 2\n",
-            "\n",
-            "Weather Prediction Calculation:\n",
-            "Temperature (t) = 25.0°C\n",
-            "Humidity (h) = 15.0%\n",
-            "Wind Speed (w) = 2.0 m/s (Note: this is not used directly in the formula but included in the inputs)\n",
             "\n",
             "Using the formula:\n",
             "w = (0.5 * t^2 - 0.2 * h - 15) / 0.9\n",
             "\n",
-            "Calculated Weather Prediction (w) = 327\n",
-            "Weather Condition: Sunny\n"
+            "Enter the temperature and humidity:\n",
+            "\n",
+            "For Temperature: 20°C and Humidity: 60%\n",
+            "Calculated w: 192.22222222222223\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "#program for wheather prediction\n",
-        "def weather_prediction(t, h, w):\n",
-        "    result = (0.5 * t**2 - 0.2 * h - 15) / 0.9\n",
-        "    result = round(result)\n",
+        "# Keyboard\n",
+        "def calculate_w(t, h):\n",
+        "    return (0.5 * t**2 - 0.2 * h - 15) / 0.9\n",
         "\n",
-        "    print(\"\\nWeather Prediction Calculation:\")\n",
-        "    print(f\"Temperature (t) = {t}°C\")\n",
-        "    print(f\"Humidity (h) = {h}%\")\n",
-        "    print(f\"Wind Speed (w) = {w} m/s (Note: this is not used directly in the formula but included in the inputs)\")\n",
+        "def main():\n",
         "    print(\"\\nUsing the formula:\")\n",
         "    print(\"w = (0.5 * t^2 - 0.2 * h - 15) / 0.9\")\n",
         "\n",
-        "    print(f\"\\nCalculated Weather Prediction (w) = {result}\")\n",
+        "    while True:\n",
+        "        try:\n",
+        "            temperature = float(input(\"Enter temperature in °C: \"))\n",
+        "            humidity = float(input(\"Enter humidity in %: \"))\n",
+        "            if 0 <= humidity <= 100:\n",
+        "                break\n",
+        "            else:\n",
+        "                print(\"Humidity must be between 0% and 100%.\")\n",
+        "        except ValueError:\n",
+        "            print(\"Invalid input. Please enter a number.\")\n",
         "\n",
-        "    if result > 40:\n",
-        "        weather_condition = \"Sunny\"\n",
-        "    elif 20 <= result <= 40:\n",
-        "        weather_condition = \"Partly Cloudy\"\n",
-        "    elif 0 <= result < 20:\n",
-        "        weather_condition = \"Cloudy\"\n",
-        "    elif result < 0:\n",
-        "        weather_condition = \"Rainy\"\n",
+        "    w = calculate_w(temperature, humidity)\n",
+        "    print(f\"\\nFor Temperature: {temperature}°C and Humidity: {humidity}%\")\n",
+        "    print(f\"Calculated w: {w}\")\n",
         "\n",
-        "    print(f\"Weather Condition: {weather_condition}\")\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_sD9jiAkmLgq",
+        "outputId": "89f18525-0835-4675-a100-121609f03a76"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Using the formula:\n",
+            "w = (0.5 * t^2 - 0.2 * h - 15) / 0.9\n",
+            "Enter temperature in °C: 15\n",
+            "Enter humidity in %: 21\n",
+            "\n",
+            "For Temperature: 15.0°C and Humidity: 21.0%\n",
+            "Calculated w: 103.66666666666666\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calculate_weather_index(t, h):\n",
+        "    return (0.5 * t**2 - 0.2 * h - 15) / 0.9\n",
+        "\n",
+        "filename = '/content/single_input_weather.txt'\n",
+        "\n",
+        "try:\n",
+        "    with open(filename, 'r') as file:\n",
+        "        line = file.readline().strip()\n",
+        "        t, h = map(float, line.split())\n",
+        "        w = calculate_weather_index(t, h)\n",
+        "        print(\"\\nUsing the formula:\")\n",
+        "        print(\"w = (0.5 * t^2 - 0.2 * h - 15) / 0.9\")\n",
+        "        print(f\"File input -> Temperature: {t}, Humidity: {h}, Weather Index: {w:.2f}\")\n",
+        "except Exception as e:\n",
+        "    print(f\"Error reading the file: {e}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lYCQI9mMmQJe",
+        "outputId": "b5993329-652b-4fce-eac9-d6f29cdffac9"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Using the formula:\n",
+            "w = (0.5 * t^2 - 0.2 * h - 15) / 0.9\n",
+            "File input -> Temperature: 100.0, Humidity: 80.0, Weather Index: 5521.11\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def calculate_weather_index(t, h):\n",
+        "\n",
+        "    return (0.5 * t**2 - 0.2 * h - 15) / 0.9\n",
         "\n",
         "\n",
-        "temperature = float(input(\"Enter the temperature (°C): \"))\n",
-        "humidity = float(input(\"Enter the humidity (%): \"))\n",
-        "wind_speed = float(input(\"Enter the wind speed (m/s): \"))\n",
+        "def multiple_inputs_file_solution(filename):\n",
+        "    try:\n",
+        "        with open(filename, 'r') as file:\n",
+        "            print(\"\\nMultiple Inputs from File:\")\n",
+        "            for i, line in enumerate(file, start=1):\n",
+        "                line = line.strip()\n",
+        "                if not line:\n",
+        "                    continue\n",
+        "                t, h = map(float, line.split())\n",
+        "                w = calculate_weather_index(t, h)\n",
+        "                print(f\"Temperature: {t}, Humidity: {h}, Weather Index: {w:.2f}\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error reading the file: {e}\")\n",
         "\n",
-        "weather_prediction(temperature, humidity, wind_speed)"
+        "\n",
+        "filename = r'/content/multiple_inputs_weather.txt'\n",
+        "multiple_inputs_file_solution(filename)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EysCMhgPm3Dr",
+        "outputId": "768624cb-cf7d-4783-e21c-bea8d20d29e3"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Multiple Inputs from File:\n",
+            "Temperature: 25.0, Humidity: 60.0, Weather Index: 317.22\n",
+            "Temperature: 30.0, Humidity: 55.0, Weather Index: 471.11\n",
+            "Temperature: 20.0, Humidity: 70.0, Weather Index: 190.00\n"
+          ]
+        }
       ]
     }
   ]
