--- a/exp_2.ipynb
+++ b/exp_2.ipynb
@@ -210,7 +210,8 @@
             "Multiple Inputs from File:\n",
             "Temperature: 25.0, Humidity: 60.0, Weather Index: 317.22\n",
             "Temperature: 30.0, Humidity: 55.0, Weather Index: 471.11\n",
-            "Temperature: 20.0, Humidity: 70.0, Weather Index: 190.00\n"
+            "Temperature: 20.0, Humidity: 70.0, Weather Index: 18
+0.00\n"
           ]
         }
       ]
